- created Ergodox Colemak mapping - fixed shift position in ergodox qwerty layout

--- a/app/style.css
+++ b/app/style.css
@@ -48,7 +48,6 @@ html{height:100%}body{height:100%;overflow:auto;font-family:Helvetica,Arial,Sans
             }
             li {
                 font-weight:normal;
-				font-size:50%;
                 display:inline;
                 padding:10px 15px 10px 15px;
                 background-color:#98c8f7;
